2017-08-06  James Craig  <jcraig@apple.com>

        Update prefers-reduced-motion demos to link back to blog post
        https://bugs.webkit.org/show_bug.cgi?id=175251

        Unreviewed, added some cross links to older demo files.

        * blog-files/prefers-reduced-motion/axi.htm:
        * blog-files/prefers-reduced-motion/prm.htm:

2017-08-04  Jon Davis  <jond@apple.com>

        Fixed loading feature status page queries and anchor link URLs
        https://bugs.webkit.org/show_bug.cgi?id=175156

        Reviewed by Simon Fraser.

        * wp-content/themes/webkit/status.php:

2017-07-26  Frederic Wang  <fwang@igalia.com>

        Unreviewed, minor adjustments to the previous demo.

        * demos/frames/index.html: Added. Index page for the list of demos.
        * demos/frames/sandboxing/index.html: Minor fixes.

2017-07-26  Frederic Wang  <fwang@igalia.com>

        Unreviewed, add demos (frame sandboxing and scrolling) for a blog post.

        * demos/frames/sandboxing/am-i-sandboxed.html: Added.
        * demos/frames/sandboxing/framebusting-success.html: Added.
        * demos/frames/sandboxing/framebusting-without-user-activation.html: Added.
        * demos/frames/sandboxing/index.html: Added.
        * demos/frames/scrollable-iframes.html: Added.
        * demos/frames/scrollingElement.html: Added.

2017-07-20  Jiewen Tan  <jiewen_tan@apple.com>

        Unreviewed, add the final demo page for a WebCrypto API blog post

        * demos/webcrypto/pbkdf2.html: Added.

2017-07-20  Jiewen Tan  <jiewen_tan@apple.com>

        Unreviewed, add yet another demo page for a WebCrypto API blog post

        * demos/webcrypto/aes-gcm.html:
        * demos/webcrypto/alice.png: Added.
        * demos/webcrypto/bob.png: Added.
        * demos/webcrypto/ecdh.html: Added.

2017-07-20  Jiewen Tan  <jiewen_tan@apple.com>

        Unreviewed, add another demo page for a WebCrypto API blog post

        * demos/webcrypto/aes-gcm.html: Added.