@@ -1,3 +1,13 @@
+2017-08-07  Jon Davis  <jond@apple.com>
+
+        Fixed superscript rendering for blog posts
+        https://bugs.webkit.org/show_bug.cgi?id=175285
+
+        Reviewed by Filip Pizlo.
+
+        * wp-content/themes/webkit/style.css:
+        (sup): Added.
+
 2017-08-06  James Craig  <jcraig@apple.com>
 
         Update prefers-reduced-motion demos to link back to blog post
